# tfg-stride

./: .gitignore  .langignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  tmp3tpjme44idf_417723
core/src/: CMakeLists.txt  main.cc
core/src/brain/: blackboard.h  blackboard.hpp
core/src/brain/display/: display.cc
core/src/brain/expander/: i2c_bus.cc  i2c_bus.hpp
core/src/brain/interpreter/: interpreter.cc  interpreter.hpp
core/src/brain/network/: network.cc  network.h  network.hpp
core/src/brain/server/: server.cc  server.h  server.hpp
core/src/handler/: browser.cc  editor.cc  librarie.cc  ping.cc  root.cc  save.cc  view.cc
core/src/handler/include/: browser.hpp  editor.hpp  handler.hpp  librarie.hpp  ping.hpp  root.hpp  save.hpp  view.hpp
core/src/tasks/: display_task.cc  i2c_task.cc  open_card_task.cc  read_card_task.cc  reload_task.cc  server_mode_task.cc  server_task.cc
core/src/tasks/include/: card_task.hpp  display_task.hpp  i2c_task.hpp  reload_task.hpp  server_mode_task.hpp  server_task.hpp
core/src/types/: enums.hpp  types.hpp
core/src/utils/hexer/: hexer.cc  hexer.hpp
core/src/utils/sink/: sink.cc  (+1 more)
main/: CMakeLists.txt  constants.c  example.str  hello_world_main.c  lexer_test  main.c  main.cc  main.h  makefile  parser_test  program.str
main/config/: constants.h  logs.h  routes.h
main/constants/: routes.h
main/consts/: utility.h
main/controllers/: input.cc  output.cc  pin_base.h
main/controllers/libs/: input.h  output.h
main/display/: display.cc  display.h
main/drivers/: led_driver.c  led_driver.h  pcf_driver.c  pcf_driver.h
main/handlers/: config_endpoint.cc  handler.h  ping_endpoint.cc  root_endpoint.cc  root_endpoint.h  sd_browser_endpoint.cc  sd_editor_endpoint.cc  sd_reader_endpoint.cc  status_endpoint.cc  wifi_config_handler.cc
main/handlers/libs/: config_endpoint.h  ping_endpoint.h  root_endpoint.h  sd_browser_endpoint.h  sd_editor_endpoint.h  sd_reader_endpoint.h  status_endpoint.h  wifi_config_handler.h
main/language/: interpreter.cc  interpreter.h  lexer.cc  lexer.h  parser.cc  parser.h  runtime.cc  runtime.h
main/language/lexer/: lexer.cc  lexer.h  line_lexer.cc  line_lexer.h
main/log/: storage.cc  storage.h  time_utils.cc  time_utils.h
main/network/: network.cc  network.h
main/server/: http_server.c  http_server.h  server.c  server.cc  server.h
main/server/handlers/: handler_config.c  handler_config.h  handler_led.c  handler_led.h  handler_root.h  handler_status.c  handler_status.h
main/tasks/lib/: button_task.h
main/tests/: lexer_test.cc  parser_test.cc
main/utils/: check.h  parseHex.h
main/wifi/: WifiHandler.cc  WifiHandler.h  credentials.c  credentials.h  wifi.c  wifi.h  wifi_credentials.cc  wifi_credentials.h
(+37 files in other folders)
